Attempt at composite script