@@ -3,9 +3,12 @@
 # echo out what our config is set to
 function showConfig() {
   echo "=========================================================="
-  echo "Backend opts: ${JAVA_OPTS_BE}"
   echo "Number of runs: ${NUM_OF_RUNS}"
+  echo "Number of groups: ${GROUP_COUNT}"
+  echo "Number of Transaction Injectors: ${TI_JVM_COUNT}"
+  echo "Backend Options: ${JAVA_OPTS_BE}"
   echo "Results dir: ${RESULTS_DIR}"
+  echo "MODE: ${MODE}"
   echo "=========================================================="
 }
 
@@ -17,7 +20,6 @@ function checkHostReadiness() {
   numactl --show
   echo "=========================================================="
 }
-
 
 # Get the total CPU count from the affinity.sh script
 TOTAL_CPU_COUNT=0
@@ -68,6 +70,12 @@ function beforeEachRun() {
 
 }
 
+# The make script passes in variables as strings and so we need to remove quotes and potentially other special characters
+sanitizeIncomingVariables() {
+    JAVA="${JAVA%\"}"
+    JAVA="${JAVA#\"}"
+}
+
 # The main run script for SPECjbb2015 in MultiJVM mode
 function runSpecJbbMulti() {
 
@@ -97,13 +105,12 @@ function runSpecJbbMulti() {
     echo "Run $runNumber: $timestamp"
     echo
 
-    # JAVA is a previously exported environment variable coming in from testenv.mk and so we sanitize it
-    JAVA="${JAVA%\"}"
-    JAVA="${JAVA#\"}"
+    sanitizeIncomingVariables
 
     echo "Starting the Controller JVM"
     # We don't double quote escape all arguments as some of those are being passed in as a list with spaces
     # shellcheck disable=SC2086
+    # TODO check with Monica, won't the controller interfere with thr cpu Range of 0-63 that we have resevered for the TI and BE here?
     local controllerCommand="${JAVA} ${JAVA_OPTS_C} ${SPECJBB_OPTS_C} -jar ${SPECJBB_JAR} -m MULTICONTROLLER ${MODE_ARGS_C} 2>controller.log 2>&1 | tee controller.out &"
     echo "$controllerCommand"
     eval "${controllerCommand}"
@@ -191,9 +198,90 @@ function runSpecJbbMulti() {
   done
 }
 
+# The main run script for SPECjbb2015 in Composite mode
+function runSpecJbbComposite() {
+
+  for ((runNumber=1; runNumber<=NUM_OF_RUNS; runNumber=runNumber+1)); do
+
+    # Create timestamp for use in logging, this is split over two lines as timestamp itself is a function
+    local timestamp
+    timestamp=$(date +%Y%m%d_%H%M%S)
+
+    # Some O/S setup before each run
+    beforeEachRun
+
+    # Create temp result directory                
+    local result
+    result="${RESULTS_DIR%\"}"
+    result="${result#\"}"
+    mkdir -pv "${result}"
+    
+    # Copy current SPECjbb2015 config for this run to the result directory
+    cp -r "${SPECJBB_CONFIG}" "${result}"
+    cd "${result}" || exit
+    
+    # Start logging
+    echo "==============================================="
+    echo "Launching SPECjbb2015 in MultiJVM mode...      "
+    echo
+    echo "Run $runNumber: $timestamp"
+    echo
+
+    sanitizeIncomingVariables
+
+    local cpuCount=0
+
+    getTotalCPUs
+
+    # Calculate CPUs avaialble via NUMA for this run. We use some math to create a CPU range string
+    # E.g if totalCpuCount is 64, then we should use 0-63
+    local cpuInit=$((cpuCount*TOTAL_CPU_COUNT))                 # e.g., 0 * 64 = 0
+    local cpuMax=$(($(($((cpuCount+1))*TOTAL_CPU_COUNT))-1))    # e.g., 1 * 64 - 1 = 63
+    local cpuRange="${cpuInit}-${cpuMax}"                       # e.g., 0-63
+    echo "cpuRange is: $cpuRange"
+
+    local backendJvmId=beJVM
+    local backendName="$groupId.Backend.${backendJvmId}"
+    
+    # Add GC logging to the backend's JVM options. We use the recommendended settings for Microsoft's internal GC analysis tool called Censum
+    JAVA_OPTS_BE_WITH_GC_LOG="$JAVA_OPTS_BE -Xlog:gc*,gc+ref=debug,gc+phases=debug,gc+age=trace,safepoint:file=${backendName}_gc.log"
+
+    echo "Start $BE_NAME"
+    # We don't double quote escape all arguments as some of those are being passed in as a list with spaces
+    # shellcheck disable=SC2086
+    local backendCommand="numactl --physcpubind=$cpuRange --localalloc ${JAVA} ${JAVA_OPTS_BE_WITH_GC_LOG} ${SPECJBB_OPTS_C} ${SPECJBB_OPTS_BE} -jar ${SPECJBB_JAR} -m COMPOSITE ${MODE_ARGS_BE} > ${backendName}.log 2>&1 &"
+    echo "$backendCommand"
+    eval "${backendCommand}"
+    echo -e "\t$BE_NAME PID = $!"
+
+    # Increment the CPU count so that we use a new range for the next run
+    # TODO This is actually pointless as run and group = 1 in our current experiment
+    # cpucount=$((cpucount+1))
+    echo
+    echo "SPECjbb2015 is running..."
+    echo "Please monitor $result/controller.out for progress"
+
+    echo "SPECjbb2015 has finished"
+    echo
+    
+    cd "${WORKING_DIR}" || exit
+
+  done
+}
+
 showConfig
 checkHostReadiness
-runSpecJbbMulti
+
+if [ "$MODE" == "multi-jvm" ]; then
+    echo "Running in MultiJVM mode"
+    runSpecJbbMulti
+elif [ "$MODE" == "composite" ]; then
+    echo "Running in Composite mode"
+    runSpecJbbComposite
+elif [ "$MODE" == "distributed" ]; then
+    echo "Running in Distributed mode"
+    runSpecJbbDistributed
+fi
 
 # exit gracefully once we are done
 exit 0
